updated at: 2020-01-28 18:43, 【VRChat】オリジナル3Dモデル「アサルトフレーム000:ネイキッド」 - 工房鉄鋸 - BOOTH

--- a/VRChat/05/1018605.html
+++ b/VRChat/05/1018605.html
@@ -6,7 +6,7 @@
       【VRChat】オリジナル3Dモデル「アサルトフレーム000:ネイキッド」 - 工房鉄鋸 - BOOTH
     </title>
     <meta name="description" content=
-    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います">
+    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1018605">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム000:ネイキッド」 - 工房鉄鋸 - BOOTH">
     <meta name="twitter:description" content=
-    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います">
+    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1018605/c677226a-d514-43d7-8103-9175036235cf_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム000:ネイキッド」 - 工房鉄鋸 - BOOTH">
     <meta property="og:description" content=
-    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います">
+    "アサルトフレーム000:ネイキッド 001:テトラの素体部分のみの商品となります 今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1018605/c677226a-d514-43d7-8103-9175036235cf_base_resized.jpg">
     <meta property="og:url" content=
@@ -295,6 +295,7 @@
                             アサルトフレーム000:ネイキッド
                             001:テトラの素体部分のみの商品となります
                             今後展開予定の新作や自作、あるいは他の方の配布・販売している装備品と組み合わせて作るオリジナルロボアバターの土台にしていただければと思います
+                            2020/01/28 ふぃぎゅあばたー参加モデルになりました
                           </p>
                         </div>
                       </section>
@@ -402,6 +403,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRC想定モデル(アバター)
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
                               </div>
                             </div></a>
                           </div>
