updated at: 2020-01-28 19:13, 【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」 - 工房鉄鋸 - BOOTH

--- a/VRChat/74/1002974.html
+++ b/VRChat/74/1002974.html
@@ -6,7 +6,7 @@
       【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」 - 工房鉄鋸 - BOOTH
     </title>
     <meta name="description" content=
-    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました">
+    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1002974">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」 - 工房鉄鋸 - BOOTH">
     <meta name="twitter:description" content=
-    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました">
+    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1002974/6724c624-129e-44e3-9d57-d650a8639477_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【VRChat】オリジナル3Dモデル「アサルトフレーム001:テトラ」 - 工房鉄鋸 - BOOTH">
     <meta property="og:description" content=
-    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました">
+    "アサルトフレーム001：砲撃機「テトラ」 試しに売ってみる事にしました VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル 「四角い砲撃機」と言うイメージで作り始めたからテトラ コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています 2018/12/31 アップデートしました 2020/01/28 ふぃぎゅあばたー参加モデルになりました">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/a9f17602-dcf5-4174-9a68-d5d63ad5f2f5/i/1002974/6724c624-129e-44e3-9d57-d650a8639477_base_resized.jpg">
     <meta property="og:url" content=
@@ -296,7 +296,8 @@
                             VRChatのアバターとして使う事を前提としたオリジナルロボットの3Dモデル
                             「四角い砲撃機」と言うイメージで作り始めたからテトラ
                             コトブキヤのフレームアームズよろしく共通素体に装甲や武器などの外装を取り付けて自分だけのロボアバターを組み立てる使い方を想定しています
-                            2018/12/31 アップデートしました
+                            2018/12/31 アップデートしました 2020/01/28
+                            ふぃぎゅあばたー参加モデルになりました
                           </p>
                         </div>
                       </section>
@@ -426,6 +427,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRC想定モデル(アバター)
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/%E3%81%B5%E3%81%83%E3%81%8E%E3%82%85%E3%81%82%E3%81%B0%E3%81%9F%E3%83%BC">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                ふぃぎゅあばたー
                               </div>
                             </div></a>
                           </div>
