updated at: 2020-01-29 03:03, 穴開きプレゼントボックス - ONKC開発部 - BOOTH

--- a/VRChat/43/1361043.html
+++ b/VRChat/43/1361043.html
@@ -363,10 +363,13 @@
                             利用規約.txt：ここで書かれた利用規約
                             ※画像の男の子/女の子は付属していません。 利用規約：
                             ・テクスチャ、モデルなど製品に含まれるものを改変する事を許可します。
-                            ・商用利用可能。 ・R-18、R-18Gの利用可能。
-                            ・どの分野での使用も特に推奨していません。
-                            ・利用者の使い方によって起こされたトラブルにも一切責任負いません。 禁止事項
-                            ・モデルの自作発言 ・再配布/再販売 ・政治, 宗教, 民族問題に関わる利用
+                            ・購入者同士のデータ受け渡し（改変/未改変問わず）を許可します。
+                            ・VRChatなどの3Dモデルを使えるサービスへの3Dアバターやワールドデータの一部としてのアップロードを許可します。
+                            ・VRChatのアバターペデスタルに使うことを許可します。 ・商用利用可能。
+                            ・R-18、R-18Gの利用可能。
+                            ・利用者の使い方によって起こされたトラブルには一切責任負いません。 禁止事項
+                            ・モデルの自作発言 ・オリジナルデータをそのまま使えるような形の再配布/再販売
+                            ・政治, 宗教, 民族問題に関わる利用
                             ・他者または集団に対する誹謗中傷のための利用
                             など、このモデルを使ったハラスメント行為は禁止しています。
                           </p>
