updated at: 2020-01-29 20:30, 「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 - シンヤの模造武具 - BOOTH

--- a/VRChat/39/944339.html
+++ b/VRChat/39/944339.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      サイバーブレードver1.1 - シンヤの模造武具 - BOOTH
+      「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 - シンヤの模造武具 - BOOTH
     </title>
     <meta name="description" content=
     "VRchatでの使用を目的にした武器のモデルデータです。 サブスタンスペインターを使って作成したメタリックでかっこいい質感をお楽しみください！ unityパッケージデータ fbxデータ テクスチャデータ △ポリゴン数412 お問い合わせについてはモデル内に作成者の情報などが記載されていますのでご確認ください。 2018/12/10 ver1.1　マテリアルの数の変更とマテリアル統合モデルを用意しました。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "サイバーブレードver1.1 - シンヤの模造武具 - BOOTH">
+    "「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 - シンヤの模造武具 - BOOTH">
     <meta name="twitter:description" content=
     "VRchatでの使用を目的にした武器のモデルデータです。 サブスタンスペインターを使って作成したメタリックでかっこいい質感をお楽しみください！ unityパッケージデータ fbxデータ テクスチャデータ △ポリゴン数412 お問い合わせについてはモデル内に作成者の情報などが記載されていますのでご確認ください。 2018/12/10 ver1.1　マテリアルの数の変更とマテリアル統合モデルを用意しました。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/944339/f817a0b9-0e5d-428f-983d-5fb8f730f1df_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "サイバーブレードver1.1 - シンヤの模造武具 - BOOTH">
+    "「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 - シンヤの模造武具 - BOOTH">
     <meta property="og:description" content=
     "VRchatでの使用を目的にした武器のモデルデータです。 サブスタンスペインターを使って作成したメタリックでかっこいい質感をお楽しみください！ unityパッケージデータ fbxデータ テクスチャデータ △ポリゴン数412 お問い合わせについてはモデル内に作成者の情報などが記載されていますのでご確認ください。 2018/12/10 ver1.1　マテリアルの数の変更とマテリアル統合モデルを用意しました。">
     <meta property="og:image" content=
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          サイバーブレードver1.1
+                          「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -225,7 +225,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/944339"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="サイバーブレードver1.1 | シンヤの模造武具"
+                          data-text=
+                          "「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」 | シンヤの模造武具"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -244,16 +245,19 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="サイバーブレードver1.1" class=
-                            "market-item-detail-item-image" src=
+                            <img alt=
+                            "「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/944339/f817a0b9-0e5d-428f-983d-5fb8f730f1df_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="サイバーブレードver1.1" class=
-                            "market-item-detail-item-image"
+                            <img alt=
+                            "「のらきゃっと採用」サイバーブレードver1.1「カーボンブレード」"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/944339/d0e1e36f-5a58-4a94-92d5-5f5622ae51b3_base_resized.jpg">
                           </div>
