--- a/VRChat/81/1318681.html
+++ b/VRChat/81/1318681.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      NowLoading... - おむらいすの物置 - BOOTH
+      NowLoading... - おむすとあ - BOOTH
     </title>
     <meta name="description" content=
     "Loading中です 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 先にVRCSDKを導入しておいてください 作者：おむらいす twitter：https://twitter.com/a_mochiya">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "NowLoading... - おむらいすの物置 - BOOTH">
+    "NowLoading... - おむすとあ - BOOTH">
     <meta name="twitter:description" content=
     "Loading中です 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 先にVRCSDKを導入しておいてください 作者：おむらいす twitter：https://twitter.com/a_mochiya">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1318681/2ac3e991-f43c-4850-8729-225466cacc75_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "NowLoading... - おむらいすの物置 - BOOTH">
+    "NowLoading... - おむすとあ - BOOTH">
     <meta property="og:description" content=
     "Loading中です 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 先にVRCSDKを導入しておいてください 作者：おむらいす twitter：https://twitter.com/a_mochiya">
     <meta property="og:image" content=
@@ -122,11 +122,11 @@
                           href="https://v-omuraisu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おむらいすの物置" class=
+                            <img alt="おむすとあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1971172/icon_image/b9100ac5-687f-446c-81cc-dfb80ba87131_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おむらいすの物置
+                              おむすとあ
                             </div>
                           </div></a>
                         </div>
@@ -208,7 +208,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1318681"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="NowLoading... | おむらいすの物置"
+                          data-text="NowLoading... | おむすとあ"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
