--- a/VRChat/50/1271250.html
+++ b/VRChat/50/1271250.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      3Dメガネ - おむらいすの物置 - BOOTH
+      3Dメガネ - おむすとあ - BOOTH
     </title>
     <meta name="description" content=
     "3Dメガネです 最先端の技術をお楽しみください マテリアルが3つです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
@@ -12,13 +12,13 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1271250">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="3Dメガネ - おむらいすの物置 - BOOTH">
+    <meta name="twitter:title" content="3Dメガネ - おむすとあ - BOOTH">
     <meta name="twitter:description" content=
     "3Dメガネです 最先端の技術をお楽しみください マテリアルが3つです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1271250/0a3c964c-ac7a-47f8-b684-e82855915112_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="3Dメガネ - おむらいすの物置 - BOOTH">
+    <meta property="og:title" content="3Dメガネ - おむすとあ - BOOTH">
     <meta property="og:description" content=
     "3Dメガネです 最先端の技術をお楽しみください マテリアルが3つです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://v-omuraisu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おむらいすの物置" class=
+                            <img alt="おむすとあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1971172/icon_image/b9100ac5-687f-446c-81cc-dfb80ba87131_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おむらいすの物置
+                              おむすとあ
                             </div>
                           </div></a>
                         </div>
@@ -206,7 +206,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1271250"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="3Dメガネ | おむらいすの物置" data-count=
+                          data-text="3Dメガネ | おむすとあ" data-count=
                           "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
