updated at: 2020-01-29 22:59, やかん - おむすとあ - BOOTH

--- a/VRChat/92/1273692.html
+++ b/VRChat/92/1273692.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      やかん - おむらいすの物置 - BOOTH
+      やかん - おむすとあ - BOOTH
     </title>
     <meta name="description" content=
     "やかんです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
@@ -12,13 +12,13 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1273692">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="やかん - おむらいすの物置 - BOOTH">
+    <meta name="twitter:title" content="やかん - おむすとあ - BOOTH">
     <meta name="twitter:description" content=
     "やかんです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1273692/409916f4-375c-4598-b4a6-13e38f559beb_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="やかん - おむらいすの物置 - BOOTH">
+    <meta property="og:title" content="やかん - おむすとあ - BOOTH">
     <meta property="og:description" content=
     "やかんです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://v-omuraisu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おむらいすの物置" class=
+                            <img alt="おむすとあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1971172/icon_image/b9100ac5-687f-446c-81cc-dfb80ba87131_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おむらいすの物置
+                              おむすとあ
                             </div>
                           </div></a>
                         </div>
@@ -206,8 +206,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1273692"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="やかん | おむらいすの物置" data-count=
-                          "none" class="twitter-share-button" href=
+                          data-text="やかん | おむすとあ" data-count="none"
+                          class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
