updated at: 2020-01-29 23:55, パンのやつ - おむすとあ - BOOTH

--- a/VRChat/68/1259468.html
+++ b/VRChat/68/1259468.html
@@ -3,26 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>
-      バッグクロージャー - おむらいすの物置 - BOOTH
+      パンのやつ - おむすとあ - BOOTH
     </title>
     <meta name="description" content=
-    "パンの袋のあれです 正式名称はバッグクロージャー 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
+    "パンの袋のあれです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1259468">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content=
-    "バッグクロージャー - おむらいすの物置 - BOOTH">
+    <meta name="twitter:title" content="パンのやつ - おむすとあ - BOOTH">
     <meta name="twitter:description" content=
-    "パンの袋のあれです 正式名称はバッグクロージャー 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
+    "パンの袋のあれです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1259468/ae0f1ff0-3ee5-4ac9-87ef-6f006258f58b_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content=
-    "バッグクロージャー - おむらいすの物置 - BOOTH">
+    <meta property="og:title" content="パンのやつ - おむすとあ - BOOTH">
     <meta property="og:description" content=
-    "パンの袋のあれです 正式名称はバッグクロージャー 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
+    "パンの袋のあれです 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません．">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1259468/ae0f1ff0-3ee5-4ac9-87ef-6f006258f58b_base_resized.jpg">
     <meta property="og:url" content=
@@ -122,17 +120,17 @@
                           href="https://v-omuraisu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おむらいすの物置" class=
+                            <img alt="おむすとあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1971172/icon_image/b9100ac5-687f-446c-81cc-dfb80ba87131_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おむらいすの物置
+                              おむすとあ
                             </div>
                           </div></a>
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          バッグクロージャー
+                          パンのやつ
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -208,9 +206,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1259468"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="バッグクロージャー | おむらいすの物置"
-                          data-count="none" class=
-                          "twitter-share-button" href=
+                          data-text="パンのやつ | おむすとあ" data-count=
+                          "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
@@ -227,7 +224,7 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="バッグクロージャー" class=
+                            <img alt="パンのやつ" class=
                             "market-item-detail-item-image" src=
                             "https://booth.pximg.net/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1259468/ae0f1ff0-3ee5-4ac9-87ef-6f006258f58b_base_resized.jpg">
                           </div>
@@ -244,8 +241,7 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            パンの袋のあれです 正式名称はバッグクロージャー
-                            元ファイルをそのまま販売することのみ禁止します．
+                            パンの袋のあれです 元ファイルをそのまま販売することのみ禁止します．
                             改変その他ご自由にお使いください．
                             使用により起こった事象について作者は責任を負いません．
                           </p>
