--- a/VRChat/92/1180592.html
+++ b/VRChat/92/1180592.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      結束バンド - おむらいすの物置 - BOOTH
+      結束バンド - おむすとあ - BOOTH
     </title>
     <meta name="description" content=
     "みんな大好き 結束バンド，インシュロック，タイラップです． 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 大体Unity上でスケールを5，5，5にするといい感じです． 作者：おむらいす twitter：https://twitter.com/a_mochiya --更新履歴-- 19/03/20：kessokuBand_V2 　　　　　真っ直ぐな結束バンドも追加しました．">
@@ -12,13 +12,13 @@
     <link rel="canonical" href="https://booth.pm/ja/items/1180592">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="結束バンド - おむらいすの物置 - BOOTH">
+    <meta name="twitter:title" content="結束バンド - おむすとあ - BOOTH">
     <meta name="twitter:description" content=
     "みんな大好き 結束バンド，インシュロック，タイラップです． 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 大体Unity上でスケールを5，5，5にするといい感じです． 作者：おむらいす twitter：https://twitter.com/a_mochiya --更新履歴-- 19/03/20：kessokuBand_V2 　　　　　真っ直ぐな結束バンドも追加しました．">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1180592/806b5069-2ea4-44c6-99b0-f330d3cf6eb8_base_resized.jpg">
     <meta property="og:type" content="product">
-    <meta property="og:title" content="結束バンド - おむらいすの物置 - BOOTH">
+    <meta property="og:title" content="結束バンド - おむすとあ - BOOTH">
     <meta property="og:description" content=
     "みんな大好き 結束バンド，インシュロック，タイラップです． 元ファイルをそのまま販売することのみ禁止します． 改変その他ご自由にお使いください． 使用により起こった事象について作者は責任を負いません． 大体Unity上でスケールを5，5，5にするといい感じです． 作者：おむらいす twitter：https://twitter.com/a_mochiya --更新履歴-- 19/03/20：kessokuBand_V2 　　　　　真っ直ぐな結束バンドも追加しました．">
     <meta property="og:image" content=
@@ -120,11 +120,11 @@
                           href="https://v-omuraisu.booth.pm/">
                           <div class=
                           "u-d-flex u-align-items-center">
-                            <img alt="おむらいすの物置" class=
+                            <img alt="おむすとあ" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/1971172/icon_image/b9100ac5-687f-446c-81cc-dfb80ba87131_base_resized.jpg">
                             <div class="u-text-ellipsis">
-                              おむらいすの物置
+                              おむすとあ
                             </div>
                           </div></a>
                         </div>
@@ -226,7 +226,7 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1180592"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="結束バンド | おむらいすの物置" data-count=
+                          data-text="結束バンド | おむすとあ" data-count=
                           "none" class="twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
                           <div class="u-ml-300">
