updated at: 2020-01-30 21:06, fbxモデル ハンドガン「N96」v1.11 - Store*Snowlight - BOOTH

--- a/VRChat/08/938208.html
+++ b/VRChat/08/938208.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>
-      fbxモデル ハンドガン「N96」 - Store*Snowlight - BOOTH
+      fbxモデル ハンドガン「N96」v1.11 - Store*Snowlight - BOOTH
     </title>
     <meta name="description" content=
     "本製品は、fbx形式の3D武器モデルです。 Unityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。">
@@ -13,14 +13,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "fbxモデル ハンドガン「N96」 - Store*Snowlight - BOOTH">
+    "fbxモデル ハンドガン「N96」v1.11 - Store*Snowlight - BOOTH">
     <meta name="twitter:description" content=
     "本製品は、fbx形式の3D武器モデルです。 Unityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/6fdd6c77-0253-4bb3-96c6-689a36ec689f_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "fbxモデル ハンドガン「N96」 - Store*Snowlight - BOOTH">
+    "fbxモデル ハンドガン「N96」v1.11 - Store*Snowlight - BOOTH">
     <meta property="og:description" content=
     "本製品は、fbx形式の3D武器モデルです。 Unityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。">
     <meta property="og:image" content=
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          fbxモデル ハンドガン「N96」
+                          fbxモデル ハンドガン「N96」v1.11
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -226,7 +226,7 @@
                           "https://booth.pm/ja/items/938208"
                           data-lang="ja" data-hashtags="booth_pm"
                           data-text=
-                          "fbxモデル ハンドガン「N96」 | Store*Snowlight"
+                          "fbxモデル ハンドガン「N96」v1.11 | Store*Snowlight"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -245,18 +245,28 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="fbxモデル ハンドガン「N96」" class=
-                            "market-item-detail-item-image" src=
+                            <img alt="fbxモデル ハンドガン「N96」v1.11"
+                            class="market-item-detail-item-image"
+                            src=
                             "https://booth.pximg.net/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/6fdd6c77-0253-4bb3-96c6-689a36ec689f_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="fbxモデル ハンドガン「N96」" class=
-                            "market-item-detail-item-image"
+                            <img alt="fbxモデル ハンドガン「N96」v1.11"
+                            class="market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/1eea13ea-4a96-40db-9d9c-e38024481f7b_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="fbxモデル ハンドガン「N96」v1.11"
+                            class="market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/3cbc4c4f-4df4-4274-b69a-425a98319f65_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -269,6 +279,10 @@
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/1eea13ea-4a96-40db-9d9c-e38024481f7b_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/bb487ead-0245-44f1-9e26-22a99b59aed0/i/938208/3cbc4c4f-4df4-4274-b69a-425a98319f65_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
