updated at: 2020-01-30 22:55, オリジナル3Dモデル「ロップ　リマスターバージョン」 - うさみみ雑貨店 - BOOTH

--- a/VRChat/70/1287770.html
+++ b/VRChat/70/1287770.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル「ロップ　リマスターバージョン」 - うさみみ雑貨店 - BOOTH
     </title>
     <meta name="description" content=
-    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 ------------------------------------------------------------------------------ フォルダ内容一覧">
+    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 2020/01/31 ver1.1 ・顔メッシュのUVを修正 ・テクスチャの色合いを若干変更（ドロワーズ部分） ・fbxが同梱されていなかったのを修正">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1287770">
@@ -15,16 +15,16 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル「ロップ　リマスターバージョン」 - うさみみ雑貨店 - BOOTH">
     <meta name="twitter:description" content=
-    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 ------------------------------------------------------------------------------ フォルダ内容一覧">
+    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 2020/01/31 ver1.1 ・顔メッシュのUVを修正 ・テクスチャの色合いを若干変更（ドロワーズ部分） ・fbxが同梱されていなかったのを修正">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/c7c2d604-e44a-43a9-ad55-a87c60d40dbb_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/a600b7c7-aabe-404f-9696-22e297a28561_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル「ロップ　リマスターバージョン」 - うさみみ雑貨店 - BOOTH">
     <meta property="og:description" content=
-    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 ------------------------------------------------------------------------------ フォルダ内容一覧">
+    "オリジナル3Dモデル「ロップ」(https://usamimi-zakka.booth.pm/items/1097419)のリマスター版です。 以下Readmeと利用規約内容です。 ------------------------------------------------------------------------------ 3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0 2020/01/31 ver1.1 ・顔メッシュのUVを修正 ・テクスチャの色合いを若干変更（ドロワーズ部分） ・fbxが同梱されていなかったのを修正">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/c7c2d604-e44a-43a9-ad55-a87c60d40dbb_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/a600b7c7-aabe-404f-9696-22e297a28561_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1287770">
     <meta name="skip_auto_login" content="">
@@ -176,8 +176,9 @@
                                   <div class="cart-button-wrap">
                                     <a class=
                                     "btn add-cart full-length"
-                                    title="lop_remaster.zip" href=
-                                    "https://booth.pm/downloadables/534472">
+                                    title="lop_remaster_v1_1.zip"
+                                    href=
+                                    "https://booth.pm/downloadables/885487">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -186,13 +187,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        lop_remaster
+                                        lop_remaster_v1_1
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(77 MB)
+                                        &nbsp;(114 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -231,7 +232,7 @@
                             <img alt="オリジナル3Dモデル「ロップ　リマスターバージョン」"
                             class="market-item-detail-item-image"
                             src=
-                            "https://booth.pximg.net/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/c7c2d604-e44a-43a9-ad55-a87c60d40dbb_base_resized.jpg">
+                            "https://booth.pximg.net/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/a600b7c7-aabe-404f-9696-22e297a28561_base_resized.jpg">
                           </div>
                         </div>
                         <div>
@@ -275,7 +276,7 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/c7c2d604-e44a-43a9-ad55-a87c60d40dbb_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/3187e7f6-be5b-4358-9f5b-a4b381a4d53a/i/1287770/a600b7c7-aabe-404f-9696-22e297a28561_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
@@ -302,18 +303,21 @@
                             以下Readmeと利用規約内容です。
                             ------------------------------------------------------------------------------
                             3Dモデル「ロップ　リマスターバージョン」 2019/03/24 ver1.0
+                            2020/01/31 ver1.1 ・顔メッシュのUVを修正
+                            ・テクスチャの色合いを若干変更（ドロワーズ部分）
+                            ・fbxが同梱されていなかったのを修正 ・腕がついたメッシュのfbxを追加
                             ------------------------------------------------------------------------------
                             フォルダ内容一覧 lop_remaster.fbx
+                            lop_remaster_full.fbx
                             lop_remaster.blend
                             lop_remaster.unitypackage texture.psd
-                            texture.png
-                            texture_noObjectInterference.png
+                            texture.png texture_noshadow.png
                             Readme_ja.txt Readme_en.txt
                             TermOfUse_ja.txt TermOfUse_en.txt
                             ------------------------------------------------------------------------------
                             ・フルボディトラッキングに対応しています。
                             ・Unitypackageの動作環境はUnity
-                            2017.4.15f1、VRCSDKはVRCSDK-2019.03.07.12.19_Publicで動作を確認しております。
+                            2017.4.28f1、VRCSDKはVRCSDK-2019.09.18.12.15_Publicで動作を確認しております。
                             ・Unitypackageのインポートの際、先にVRCSDKをインポートしておく必要があります。
                             ・設定済のDynamic Boneを利用するためには別途Dynamic
                             Boneをインポートしてください。
@@ -322,6 +326,9 @@
                             ------------------------------------------------------------------------------
                             3Dモデル「ロップ　リマスターバージョン」利用規約 2018/03/24
                             ver1.0
+                            ------------------------------------------------------------------------------
+                            3Dモデル「ロップ　リマスターバージョン」利用規約 2018/03/24
+                            ver1.0 2020/01/31 ver1.1
                             ------------------------------------------------------------------------------
                             本モデルを使用した時点で本利用規約に同意したものとします。
                             ------------------------------------------------------------------------------
